--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
  input[type="range"] {
      -webkit-appearance: none;
      height: 3px;
-     width: 10%;
+     width: 40%;
      background: #ddd;
      border-radius:  5px;
      outline: none;
@@ -24,7 +24,7 @@
     
      height: 10px;
      width: 10px;
-     background: #28272c;
+     background: #757575;
      border-radius: 50%;
      border: 1px solid #18171f;
      cursor: pointer;
@@ -73,6 +73,10 @@ body {
      
 
 }
+.piano-keys  .key.hide span {
+     display: none;
+
+}
 
 .piano-keys .black {
      z-index: 2;
@@ -83,7 +87,7 @@ body {
      background: linear-gradient(#333,#000);
 }
 
-.piano-keys .black:active {
+.piano-keys .black.active {
      box-shadow:inset -5px 5px 20px rgba(255,250, 255, 0.1);
      background: linear-gradient(to bottom, #000 0%, #434343 100%);
 
@@ -97,7 +101,7 @@ body {
     text-align: center;
 
 }
-.piano-keys .white:active {
+.piano-keys .white.active {
      box-shadow:inset -5px 5px 20px rgba(0,0, 0, 0.2);
      background: linear-gradient(to bottom, #fff 0%, #eee 100%);
 }
